--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build"
     
   },
   "devDependencies": {
