--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build"
+    "build": "ng build",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
     
   },
   "devDependencies": {
